post halaman-admin

--- a/halaman-admin.html
+++ b/halaman-admin.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <div></div>
         <div class="navbar-left">
             <img src="img/logo2.png" alt="Logo Perusahaan">
         </div>
