--- a/halaman-agen.html
+++ b/halaman-agen.html
@@ -17,7 +17,7 @@
     </div>
     <div class="navbar-right">
       <span id="welcome-message"></span>
-      <a onclick="logout()">keluar</a>
+      <a onclick="logout()">logf</a>
     </div>
   </header>
   <main>
