--- a/penentuan-kurir.html
+++ b/penentuan-kurir.html
@@ -38,7 +38,7 @@
                 <h3>List Data Penerimaan Paket</h3>
                 <div class="resi-scroll-view" id="resiScrollView"></div>
                 <div class="checkbox">
-                    <input type="checkbox" id="checkAll">
+                    <input type="checkbox" id="checkAll" class="btn-checkbox">
                     <label for="checkAll">Centang Semua</label>
                 </div>
             </div>
