--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -21,8 +21,7 @@
             <a href="list_akun.html">List Akun</a>
         </div>
     </div>
-    
-    <main>
+    <div class="main">
         <div class="left">
             <div class="info-top">
                 <h1>Pendaftaran Akun</h1>
@@ -53,7 +52,7 @@
                 <button id="button-add" class="button-add">Tambah</button>
             </div>
         </div>
-    </main>
+    </div>
 </body>
 
 </html>
