--- a/penentuan-kurir.html
+++ b/penentuan-kurir.html
@@ -18,7 +18,7 @@
             <i class="fas fa-arrow-left fa-lg"></i><span class="btn-text">Kembali</span>
         </button>
     </div>
-    <main>
+    <div class="main">
         <div class="left-panel">
             <h1>Penentuan Kurir</h1>
             <h3>Menentukan zona pengiriman paket.</h3>
@@ -47,7 +47,7 @@
                     onclick="goToPage(this.value)">Konfirmasi</button>
             </div>
         </div>
-    </main>
+    </div>
 </body>
 
 </html>
